--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -129,6 +129,7 @@ collab-textarea>textarea {
   display: block;
   margin: 0 auto;
   max-width: 100%;
+  max-height: 80vh;
 }
 
 .markdown-body img.hidden {
