--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -18,6 +18,7 @@
     {% if acl %}
     <script src="https://cdn.jsdelivr.net/npm/collab-textarea@1.0.4/dist/index.js" type="module"></script>
     {% endif %}
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   </head>
   <body>
     {{ content | safe }}
